# VL822-Info-Update-Tool

./: README.md  main.py  nuitka.bat  pyproject.toml
VL822_firmware_upgrade_tool/: Setting.ini  start.bat  双击start.bat以执行固件更新操作.txt
VL822_firmware_upgrade_tool/Driver/: vl810filter.cat  vl810filter.inf  vl810filterX86.inf  vl810filterx86.cat
VL822_firmware_upgrade_tool/Driver/amd64/: vl810filter.sys
VL822_firmware_upgrade_tool/Driver/x86/: vl810filter.sys
